[project]
name = "spoolease-spoolman-bridge"
version = "0.1.0"
description = "Bidirectional sync bridge between SpoolEase (Bambu) and Spoolman (Klipper) filament tracking"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "cryptography>=42.0,<44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
